# crop-disease

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.hf  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.streamlit/: config.toml
api/: __init__.py  app.py  dependencies.py  middleware.py  protocols.py  schemas.py
api/routes/: __init__.py  health.py  predict.py
api/services/: __init__.py  disease_service.py  inference_service.py
app/: __init__.py  config.py  disease_info.py  model_service.py  streamlit_app.py  ui_components.py
notebooks/: crop_disease_classification.ipynb
scripts/: __init__.py  export_model.py
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py  loader.py  splitter.py  transforms.py
src/evaluation/: __init__.py  confusion.py  metrics.py  predictions.py  profiler.py
src/models/: __init__.py  factory.py  freeze.py
src/training/: __init__.py  early_stopping.py  scheduler.py  trainer.py
src/utils/: __init__.py  export.py  plot_data.py  plot_training.py  seed.py  text_helpers.py
tests/: __init__.py  test_api.py  test_config.py  test_dataset.py  test_early_stopping.py  test_export.py  test_model_factory.py  test_scheduler.py  test_splitter.py  test_text_helpers.py  test_transforms.py
wiki/: Architecture-Overview.md  Cloud-Deployment.md  Data-Pipeline.md  Deployment-Guide.md  Evaluation-and-Metrics.md  FAQ-and-Troubleshooting.md  Getting-Started.md  Home.md  Model-Training.md  Sharing-Plan.md  Streamlit-App.md  Task-Walkthrough.md
